--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "tes-mode": "vue-cli-service serve --mode test"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.0.0-rc.11",
+    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-google-charts": "^0.3.3",
-    "vue-router": "^3.2.0"
+    "vue-loading-overlay": "^4.0.3",
+    "vue-router": "^3.2.0",
+    "vue-sweetalert2": "^4.3.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
