--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ckeditor/ckeditor5-vue": "^2.0.1",
     "@ckeditor/ckeditor5-vue2": "^1.0.5",
     "axios": "^0.21.1",
+    "cleave.js": "^1.6.0",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-google-charts": "^0.3.3",
