--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-google-charts": "^0.3.3",
     "vue-loading-overlay": "^3.0.1",
     "vue-router": "^3.2.0",
+    "vue-sweetalert2": "^5.0.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
