--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.11",
     "vue-google-charts": "^0.3.3",
     "vue-loading-overlay": "^3.0.1",
+    "vue-numeric": "^2.4.3",
     "vue-router": "^3.2.0",
     "vue-sweetalert2": "^5.0.2",
     "vuex": "^3.6.2"
