--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@ckeditor/ckeditor5-vue": "^2.0.1",
     "@ckeditor/ckeditor5-vue2": "^1.0.5",
     "axios": "^0.21.1",
+    "cache": "^2.3.1",
+    "clean": "^4.0.2",
     "cleave.js": "^1.6.0",
-    "core-js": "^3.6.5",
+    "core-js": "^3.15.2",
+    "es6-promise": "^4.2.8",
     "vue": "^2.6.11",
     "vue-google-charts": "^0.3.3",
-    "vue-loading-overlay": "^3.0.1",
+    "vue-loading-overlay": "^3.4.2",
     "vue-numeric": "^2.4.3",
-    "vue-router": "^3.2.0",
+    "vue-router": "^3.5.2",
     "vue-sweetalert2": "^5.0.2",
     "vuex": "^3.6.2"
   },
