--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.6.11",
     "vue-google-charts": "^0.3.3",
     "vue-loading-overlay": "^3.4.2",
+    "vue-moment": "^4.1.0",
     "vue-numeric": "^2.4.3",
     "vue-router": "^3.5.2",
     "vue-sweetalert2": "^5.0.2",
