--- a/package.json
+++ b/package.json
@@ -12,19 +12,23 @@
     "@ckeditor/ckeditor5-build-classic": "^28.0.0",
     "@ckeditor/ckeditor5-vue": "^2.0.1",
     "@ckeditor/ckeditor5-vue2": "^1.0.5",
+    "apexcharts": "^3.27.3",
     "axios": "^0.21.1",
     "cache": "^2.3.1",
     "clean": "^4.0.2",
     "cleave.js": "^1.6.0",
     "core-js": "^3.15.2",
     "es6-promise": "^4.2.8",
+    "moment-timezone": "^0.5.33",
     "vue": "^2.6.11",
+    "vue-apexcharts": "^1.6.1",
     "vue-google-charts": "^0.3.3",
     "vue-loading-overlay": "^3.4.2",
     "vue-moment": "^4.1.0",
     "vue-numeric": "^2.4.3",
     "vue-router": "^3.5.2",
     "vue-sweetalert2": "^5.0.2",
+    "vue.charts.css": "0.0.20",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -35,6 +39,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^12.1.0",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
