--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "v-viewer": "^1.6.4",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.1",
+    "vue-good-table": "^2.21.10",
     "vue-google-charts": "^0.3.3",
     "vue-loading-overlay": "^3.4.2",
     "vue-moment": "^4.1.0",
