--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "@ckeditor/ckeditor5-vue2": "^1.0.5",
     "apexcharts": "^3.27.3",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
     "cache": "^2.3.1",
     "clean": "^4.0.2",
     "cleave.js": "^1.6.0",
     "core-js": "^3.15.2",
+    "datatables.net-bs4": "^3.2.2",
+    "datatables.net-buttons-bs4": "^1.7.1",
     "es6-promise": "^4.2.8",
+    "jquery": "^3.6.0",
+    "jszip": "^3.7.0",
     "moment-timezone": "^0.5.33",
     "v-viewer": "^1.6.4",
     "vue": "^2.6.11",
