--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VUE_APP_SERVICE_URL = https://dev-loan-api.sitama.co.id/api/v1/cms
+NODE_ENV="development"
+VUE_APP_URL="https://dev-loan-api.sitama.co.id/"
