--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "cache": "^2.3.1",
+    "cache-loader": "^4.1.0",
     "clean": "^4.0.2",
     "cleave.js": "^1.6.0",
     "core-js": "^3.15.2",
@@ -26,6 +27,7 @@
     "jquery": "^3.6.0",
     "jszip": "^3.7.0",
     "moment-timezone": "^0.5.33",
+    "v-money": "^0.8.1",
     "v-viewer": "^1.6.4",
     "vue": "^2.6.11",
     "vue-apexcharts": "^1.6.1",
